# Voxel

./: CMakeLists.txt  genVoxel.glsl  main.cpp  renderVoxel.glsl
Code/: CMakeLists.txt  base.frag  main.cpp
